nothing without update

--- a/brainly-f4/tsconfig.app.json
+++ b/brainly-f4/tsconfig.app.json
@@ -25,7 +25,9 @@
     /* Fix for module resolution */
     "baseUrl": "./",
     "paths": {
-      "@pages/*": ["src/pages/*"]
+      "@pages/*": ["src/pages/*"],
+      "@components/*": ["src/components/*"],
+      "@icon/*": ["src/icon/*"]
     },
     "rootDir": "src"
   },
